@@ -2,6 +2,31 @@
  * common.css
  * This file contains CSS settings common to Wikistandard, Nostalgia and CologneBlue
  */
+
+/* For clarity, explicitly state some recommendations from <http://www.w3.org/
+   TR/CSS21/sample.html> to make sure the editsection links scale right */
+
+h1 { font-size: 2em; }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.17em; }
+h5 { font-size: .83em; }
+h6 { font-size: .75em; }
+h1, h2, h3, h4, h5, h6 { font-weight: bolder }
+
+/* Now the custom parts */
+
+/* Make edit sections (which are inside h# tags) normal-sized */
+.editsection {
+	font-weight: normal;
+	float: right;
+	margin-left: 5px;
+}
+h1 .editsection { font-size: 50% }
+h2 .editsection { font-size: 66.7% }
+h3 .editsection { font-size: 85.5% }
+h5 .editsection { font-size: 120% }
+h6 .editsection { font-size: 133% }
+
 #footer { clear: both }
 /* images */
 div.floatright { float: right; margin: 0 0 1em 1em; }
@@ -312,11 +337,6 @@ li span.deleted {
 	text-decoration: line-through;
 	color: #888;
 	font-style: italic;
-}
-
-div.editsection {
-	float: right;
-	margin-left: 5px;
 }
 
 /* Classes for EXIF data display */
